--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="who">
                     <h2 class="hope">Who Am I</h2>
                     <p class="text">
-                        A Nigerian girl who is enthusiastic about STEM and Tech.
+                        A Nigerian girl who is enthusiastic about STEM. 
                     </p>
                 </div>
                 <div class="hope">
