--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class= nav-bar>
-        <div class="max-width">
-            <div class="brand"><a href="#home">ZAINABU MALABU</a></div>
-            <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#aboutme">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </div>
+  <header class="header">
+  <a href="" class="logo">Zainabu Malabu</a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#aboutme">About</a></li>
+    <li><a href="#project">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+  </header>
 
     <section class="home" id="home">
         <div class="max-width">
