--- a/index.html
+++ b/index.html
@@ -131,6 +131,6 @@
         </div>
     </section>
    
-    <script src="script.js"></script>
+    <script src="scrip.js"></script>
 </body>
 </html>
