--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="doing-now">
                     <h2 class="doing-now">What I'm doing now</h2>
                     <p class="text">
-                        I am currently pursuing a bachelors degree in Computer Engineering from the American University Of Nigeria.
+                        I am currently pursuing a bachelors degree in Computer Engineering at the American University Of Nigeria.
                         I started self-learning front-end development around May 2021 with the help of courses on Udemy and Youtube.
                         <br><br>
                         With the knowledge i've acquired so far, I've been able to build this website and a few other projects 
