--- a/index.html
+++ b/index.html
@@ -67,14 +67,13 @@
                 </div>
                 <div class="doing-now">
                     <h2 class="doing-now">What I'm doing now</h2>
-                    <p class="text">
-                        I am currently pursuing a bachelors degree in Computer Engineering at the American University Of Nigeria.
-                        I started self-learning front-end development around May 2021 with the help of courses on Udemy and Youtube.
-                        <br><br>
-                        With the knowledge i've acquired so far, I've been able to build this website and a few other projects 
-                        using Python and JavaScript.
-                        <br><br>
-                        My programming language of choice is Python and currently learning JavaScript, HTML and CSS. 
+                    <p class ="text">
+                        I am pursuing a bachelors degree in Computer Engineering at the American University of Nigeria.
+                        I have experience with web development(HTML, CSS and JS) and Python. 
+                    </p>
+                    <p class ="text">
+                        In addition to coding and learning new tech, I enjoy making Youtube videos, listening to BTS and binge-watching sitcoms.
+                        If any of these things interest you, I'd love to chat!
                     </p>
                 </div>
                 <div class="hobbies">
