--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column-left">
-                    <img src="images/IMG_0458.JPG" alt="">
+                    <img src="mywebsite.jpg" alt="">
                 </div>
                 <div class="column-right">
                     <div class="abouts">
