--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, I'm </div>
                 <div class="text-2">Zainabu Malabu</div>
-                <div class="text-1"> Computer Engineering Undegraduate <p> </p> and Aspiring Developer. </div>
+                <div class="text-1"> Computer Engineering Undegraduate <p> </p> and Developer. </div>
             </div>
         </div>
     </section>
