--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li class="px-2"><a href="#skills">skills</a></li>
             <span class="visible">
                 <li class="px-2"><a href="Zainabu_Malabu_Resume_new.pdf" target="_blank" target="_blank"
-                        class="border border-square rounded-md px-3 py-2 hover:text-xs hover:bg-bg3 cursor-pointer">Resume</a>
+                        class="border border-square rounded-md px-3 py-2 hover:text-xs hover:bg-bg3 cursor-pointer">resume</a>
                     <span class="absolute inline-flex h-3 w-3 rounded-full bg-bg3 -my-2 -mx-2"><span
                             class="relative animate-ping inline-flex rounded-full h-3 w-3 bg-bg3"></span></span>
 
