--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 American University of Nigeria. In my free time, I make youtube videos and binge
                 watch sitcoms :) </div>
             <img class="h-24 flex justify-start" src="svgs/cloud.svg" alt="">
-            <div class= "flex flex-col justify-center items-center">
+            <div class= "flex flex-col justify-center items-center px-2">
                 <p>"<a id="quote">Someday, somewhere- anywhere, unfailingly, you'll find yourself, and that, and only
                         that, can be the happiest or bitterest hour of your life</a>"</p>
                 <p>-<a id="person">Pablo Neruda</a></p>
