--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="px-2"><a href="#projects">projects</a></li>
             <li class="px-2"><a href="#skills">skills</a></li>
             <span class="visible">
-                <li class="px-2"><a href="Zainabu_Malabu_Resume_new.pdf" target="_blank" target="_blank"
+                <li class="px-2"><a href="Zainabu_Malabu_Res.pdf" target="_blank" target="_blank"
                         class="border border-square rounded-md px-3 py-2 hover:text-xs hover:bg-bg3 cursor-pointer">resume</a>
                     <span class="absolute inline-flex h-3 w-3 rounded-full bg-bg3 -my-2 -mx-2"><span
                             class="relative animate-ping inline-flex rounded-full h-3 w-3 bg-bg3"></span></span>
@@ -50,12 +50,13 @@
         </section>
         <section id="about" class="flex flex-col justify-center mb-28 pt-24">
             <div class="text-center font-serif text-4xl font-bold tracking-wide pb-5">about me</div>
-            <div class="p-12 text-lg xl:mx-20">Hello, my name is Zainabu. I am currently a junior studying Computer
+            <div class="p-12 text-lg xl:mx-20">Hello, my name is Zainabu Ilham. I am currently a junior studying
+                Computer
                 engineering at the
-                American University of Nigeria. In my free time, I make youtube videos and binge
-                watch sitcoms :) </div>
+                American University of Nigeria. In my free time, I listen to a lot of pop music and binge
+                watch the same sitcoms :) </div>
             <img class="h-24 flex justify-start" src="svgs/cloud.svg" alt="">
-            <div class= "flex flex-col justify-center items-center px-2">
+            <div class="flex flex-col justify-center items-center px-2">
                 <p>"<a id="quote">Someday, somewhere- anywhere, unfailingly, you'll find yourself, and that, and only
                         that, can be the happiest or bitterest hour of your life</a>"</p>
                 <p>-<a id="person">Pablo Neruda</a></p>
@@ -63,10 +64,10 @@
         </section>
         <section class="mb-28 items-center pt-24" id="projects">
             <div class="text-center font-serif text-4xl font-bold tracking-wide pb-5">Projects</div>
-            <div class="flex flex-col justify-center items-center lg:mx-24">
+            <div class="flex flex-row  justify-center items-center lg:mx-24">
                 <div
-                    class="flex flex-col h-1/2 w-1/2 m-5 bg-bg3 border border-square rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
-                    <div class="flex items-center justify-between">
+                    class="flex flex-col h-80 w-72 m-5 bg-bg3 border border-square rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
+                    <div class="flex pt-5 items-center">
                         <div class="flex flex-col py-2 px-5 font-bold">GPA Calculator <span
                                 class="font-light">2021</span>
                         </div>
@@ -78,19 +79,19 @@
 
                         </div>
                     </div>
+                    <div class="border-t-2 border-text px-2 mx-2"></div>
                     <div class="p-3">
                         A 4.0 scale GPA Calculator with max of 10 subjects. Displays GPA and also, academic standing.
                         Hosted
                         on Netlify.
                     </div>
-                    <div class="border-t-2 border-text px-2 mx-2"></div>
                     <div class="p-3">
                         TailwindCSS Javascript
                     </div>
                 </div>
                 <div
-                    class="flex flex-col h-1/2 w-1/2 m-5 bg-bg3 border border-square rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                    <div class="flex items-center md:justify-between lg:justify-between">
+                    class="flex flex-col h-80 w-72 m-5 bg-bg3 border border-square rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                    <div class="flex items-center md:justify-between lg:justify-between pt-5">
                         <div class="flex flex-col py-2 px-5 font-bold">zainabumalabu.com<span
                                 class="font-light">2021</span>
                         </div>
@@ -100,12 +101,55 @@
 
                         </div>
                     </div>
+                    <div class="border-t-2 border-text px-2 mx-2"></div>
                     <div class="p-3">
                         Personal Portfolio built from scratch.
                     </div>
+                    <div class="p-3 mt-auto pb-7">
+                        TailwindCSS Javascript
+                    </div>
+                </div>
+                <div
+                    class="flex flex-col h-80 w-72 m-5 bg-bg3 border border-square rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
+                    <div class="flex pt-5 items-center">
+                        <div class="flex flex-col py-2 px-5 font-bold">Quotes Generator API<span
+                                class="font-light">2021</span>
+                        </div>
+                        <div class="px-3">
+                            <a href="https://motivational-quote-api.herokuapp.com" target="_blank"><i
+                                    class="fas fa-globe cursor-pointer"></i></a>
+                            <a href="https://github.com/IlhamMalabu/quotes-api" target="_blank"><i
+                                    class="fab fa-github cursor-pointer"></i></a>
+
+                        </div>
+                    </div>
                     <div class="border-t-2 border-text px-2 mx-2"></div>
                     <div class="p-3">
-                        TailwindCSS Javascript
+                        A motivational quotes generator API using Node and Express. Hosted on Heroku
+                    </div>
+
+                    <div class="p-3 mt-auto pb-7">
+                        Node Express
+                    </div>
+                </div>
+                <div
+                    class="flex flex-col h-80 w-72 m-5 bg-bg3 border border-square rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
+                    <div class="flex pt-5 items-center justify-between">
+                        <div class="flex flex-col py-2 px-5 font-bold">Moodboard <span class="font-light">2021</span>
+                        </div>
+                        <div class="px-3">
+                            <a href="https://github.com/IlhamMalabu/moodboard" target="_blank"><i
+                                    class="fab fa-github cursor-pointer"></i></a>
+
+                        </div>
+                    </div>
+                    <div class="border-t-2 border-text px-2 mx-2"></div>
+                    <div class="p-3">
+                        Full-Stack Application that allows users to share posts. Users can like, comment and post.
+                    </div>
+
+                    <div class="p-3 mt-auto pb-7">
+                        React Firebase MaterialUI
                     </div>
                 </div>
         </section>
