--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     </header>
     <main class="relative">
         <section class=" h-screen flex flex-col justify-center p-5 text-center">
-            <div class="relative">
+            <div>
                 <div class="py-2 text-lg">Hi, my name is</div>
                 <div id="name" class="text-8xl m-6 font-serif tracking-wider font-bold text-c-green">
                     Zainabu Malabu
                 </div>
                 <div class="py-3 text-lg "> computer engineering undergraduate and tech enthusiast</div>
             </div>
-            <div class="">
+            <div class="mt-12">
                 <a href="#about"><i class="fas fa-chevron-down animate-bounce text-2xl"></i></a>
             </div>
         </section>
