--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="px-2"><a href="#projects">projects</a></li>
             <li class="px-2"><a href="#skills">skills</a></li>
             <span class="visible">
-                <li class="px-2"><a href="RESUME 2022.pdf" target="_blank" target="_blank"
+                <li class="px-2"><a href="files/RESUME 2022.pdf" target="_blank" target="_blank"
                         class="border border-square border-c-green rounded-md px-3 py-2 hover:font-semibold hover:bg-c-yellow cursor-pointer">resume</a>
                     <span class="absolute inline-flex h-3 w-3 rounded-full bg-c-green -my-2 -mx-2"><span
                             class="relative animate-ping inline-flex rounded-full h-3 w-3 bg-c-green"></span></span>
@@ -36,7 +36,7 @@
         <section class="h-screen flex flex-col justify-center text-center">
             <div>
                 <div class="py-2 text-lg">Hi, my name is</div>
-                <div id="name" class=" text-4xl m-6 font-serif tracking-wider font-bold text-c-green md:text-8xl lg:text-8xl xl:text-8xl 2xl:text-8xl">
+                <div id="name" class=" text-8xl m-6 font-serif tracking-wider font-bold text-c-green sm:text-4xl md:text-8xl lg:text-8xl xl:text-8xl 2xl:text-8xl">
                     Zainabu Malabu
                 </div>
                 <div class="py-3 text-lg "> computer engineering undergraduate and tech enthusiast</div>
@@ -62,7 +62,7 @@
         
         <section class="mb-28 items-center pt-24" id="projects">
             <div class="text-center font-serif text-4xl font-bold tracking-wide pb-5">projects</div>
-                <div class="flex flex-col justify-center items-center md:mx-24 flex-row xl:mx-24 flex-row 2xl:mx-24 flex-row lg:mx-24 flex-row"> 
+                <div class="flex flex-row sm:flex-col justify-center items-center md:mx-24 flex-row xl:mx-24 flex-row 2xl:mx-24 flex-row lg:mx-24 flex-row"> 
                     <div
                         class="flex flex-col h-80 w-72 m-5 bg-c-green border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
                         <div class="flex pt-5 items-center justify-between">
@@ -150,7 +150,7 @@
         </div>
     </div>
                 </div>
-                <div class="flex flex-col justify-center items-center md:mx-24 flex-row xl:mx-24 flex-row 2xl:mx-24 flex-row lg:mx-24 flex-row">
+                <div class="flex flex-row sm:flex-col justify-center items-center md:mx-24 flex-row xl:mx-24 flex-row 2xl:mx-24 flex-row lg:mx-24 flex-row">
                     <div
                     class = "flex flex-col h-80 w-72 m-5 bg-c-purple border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
         <div class="flex flex-row pt-5 items-center justify-between">
@@ -193,7 +193,7 @@
         
                 </div>
                 <div
-        class="flex flex-col h-80 w-72 m-5 bg-c-pink border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
+        class="flex flex-col h-80 w-72 m-5 bg-c-pink w-fit border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
         <div class="flex pt-5 items-center">
             <div class="flex flex-col py-2 px-5 font-bold">Breast Cancer Classification using Machine Learning<span
                     class="font-light">2022</span>
@@ -232,7 +232,7 @@
         </section>
         <section class="mb-16 pt-24" id="skills">
             <div class="text-center font-serif text-4xl font-bold tracking-wide pb-5">Skills</div>
-            <div class="flex flex-col m-20 md:flex-row lg:flex-row xl:flex-row 2xl:flex-row ">
+            <div class="flex flex-row justify-around sm:flex-col m-20 md:flex-row lg:flex-row xl:flex-row 2xl:flex-row ">
                 <div class="px-12 ">
                     <div class="font-bold font-serif text-center pb-5 text-2xl">
                         Languages
@@ -278,7 +278,7 @@
             <div class="pb-5">
                 Contact
             </div>
-            <div class="flex space-x-20 justify-center p-5 md:space-x-24 lg:space-x-24 xl:space-x-24 2xl:space-x-24">
+            <div class="flex space-x-24 sm:space-x-12 justify-center p-5 md:space-x-24 lg:space-x-24 xl:space-x-24 2xl:space-x-24">
                 <div>
                     <a href="https://github.com/IlhamMalabu" target="_blank" title="External link to my Github Account">
                         <i class="fa fa-github" id="contact-btn"></i>
