--- a/stem.html
+++ b/stem.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IEEE Stem Outreach Program</title>
     <script src="https://kit.fontawesome.com/ebf5f49d8c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stem.css">
+    <link rel="stylesheet" href="css/stem.css">
 </head>
 <body>
     <div class="bigcon">
@@ -23,11 +23,11 @@
         </div>
         <div id="slideshow">
             <div class="slide-wrapper">
-              <div class="slide"> <img src="IMG_6286.JPG" alt=""> </div>
-              <div class="slide"><img src="IMG_6287.JPG" alt=""></div>
-              <div class="slide"><img src="IMG_8483 copy 2.jpg" alt=""></div>
-              <div class="slide"><img src="IMG_8734.JPG" alt=""></div>
-              <div class="slide"><img src="IMG_8541 final.jpg" alt=""></div>
+              <div class="slide"> <img src="images/IMG_6286.JPG" alt=""> </div>
+              <div class="slide"><img src="images/IMG_6287.JPG" alt=""></div>
+              <div class="slide"><img src="images/IMG_8483 copy 2.jpg" alt=""></div>
+              <div class="slide"><img src="images/IMG_8734.JPG" alt=""></div>
+              <div class="slide"><img src="images/IMG_8541 final.jpg" alt=""></div>
             </div>
           </div>
     </div>
