--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="h-screen flex flex-col justify-center text-center">
             <div>
                 <div class="py-2 text-lg">Hi, my name is</div>
-                <div id="name" class=" text-8xl m-6 font-serif tracking-wider font-bold text-c-green sm:text-4xl md:text-8xl lg:text-8xl xl:text-8xl 2xl:text-8xl">
+                <div id="name" class=" text-8xl m-6 font-serif tracking-wider font-bold text-c-green md:text-8xl lg:text-8xl xl:text-8xl 2xl:text-8xl">
                     Zainabu Malabu
                 </div>
                 <div class="py-3 text-lg "> computer engineering undergraduate and tech enthusiast</div>
