--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="px-2"><a href="#projects">projects</a></li>
             <li class="px-2"><a href="#skills">skills</a></li>
             <span class="visible">
-                <li class="px-2"><a href="files/Zainabu_Malabu_Resume.pdf" target="_blank" target="_blank"
+                <li class="px-2"><a href="files/Zainabu_Tech_Resume_2024.pdf" target="_blank" target="_blank"
                         class="border border-square border-c-green rounded-md px-3 py-2 hover:font-semibold hover:bg-c-yellow cursor-pointer">resume</a>
                     <span class="absolute inline-flex h-3 w-3 rounded-full bg-c-green -my-2 -mx-2"><span
                             class="relative animate-ping inline-flex rounded-full h-3 w-3 bg-c-green"></span></span>
@@ -47,7 +47,7 @@
 
         <section id="about" class="flex flex-col justify-center mb-28 pt-24">
             <div class="text-center font-serif text-4xl font-bold tracking-wide pb-5">about me</div>
-            <div class="p-12 text-xl xl:mx-20"> I am currently a 4th year student
+            <div class="p-12 text-xl xl:mx-20"> I am a final year student
                 studying Computer Engineering at the American University of Nigeria. My areas of interest include
                 Data Science and Front-end Development. I am highly resourceful and also a team
                 player. In my free time, I enjoy listening to music and making Youtube videos.
@@ -304,7 +304,7 @@
         </section>
     </main>
     <footer class="text-center mb-5">
-        Copyright 2021 © Zainabu Malabu
+        Copyright 2024 © Zainabu Malabu
     </footer>
     
     </main>
