--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div id="name" class=" text-8xl m-6 font-serif tracking-wider font-bold text-c-green md:text-8xl lg:text-8xl xl:text-8xl 2xl:text-8xl">
                     Zainabu Malabu
                 </div>
-                <div class="py-3 text-lg "> computer engineering undergraduate and tech enthusiast</div>
+                <div class="py-3 text-lg "> tech and art enthusiast</div>
             </div>
             <div class="mt-12">
                 <a href="#about"><i class="fas fa-chevron-down animate-bounce text-2xl"></i></a>
