--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="p-12 text-xl xl:mx-20"> I am a final year student
                 studying Computer Engineering at the American University of Nigeria. My areas of interest include
                 Data Science and Front-end Development. I am highly resourceful and also a team
-                player. In my free time, I run an art magazine called YONKI <a href="https://yonkiabuja.com"><i>Check us out</i></a>
+                player. In my free time, I run an art magazine called YONKI <a href="https://yonkiabuja.com"><i class="text-c-green">Check us out</i></a>
             </div>
             <div class="flex flex-col justify-center items-center text-lg px-12 ">
                 <p class="">"<a id="quote">Someday, somewhere- anywhere, unfailingly, you'll find yourself, and that, and only
