--- a/stem.html
+++ b/stem.html
@@ -23,11 +23,11 @@
         </div>
         <div id="slideshow">
             <div class="slide-wrapper">
-              <div class="slide"> <img src="images/IMG_6286.JPG" alt=""> </div>
-              <div class="slide"><img src="images/IMG_6287.JPG" alt=""></div>
-              <div class="slide"><img src="images/IMG_8483 copy 2.jpg" alt=""></div>
-              <div class="slide"><img src="images/IMG_8734.JPG" alt=""></div>
-              <div class="slide"><img src="images/IMG_8541 final.jpg" alt=""></div>
+              <div class="slide"> <img src="images\IMG_6286.JPG" alt=""> </div>
+              <div class="slide"><img src="images\IMG_6287.JPG" alt=""></div>
+              <div class="slide"><img src="images\IMG_8483 copy 2.jpg" alt=""></div>
+              <div class="slide"><img src="images\IMG_8734.JPG" alt=""></div>
+              <div class="slide"><img src="images\IMG_8541 final.jpg" alt=""></div>
             </div>
           </div>
     </div>
