--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="flex flex-col h-80 w-64 m-5 bg-c-purple border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
                     <div class="flex pt-5 items-center justify-between">
                         <div class="flex flex-col py-2 px-5 font-bold">Quotes Generator API<span class="font-light">2021</span></div>
-                        <div class="px-3">
+                        <div class="px-3 flex flex-row space-x-1">
                             <a href="https://motivational-quotes-api.onrender.com" target="_blank"><i class="fas fa-globe cursor-pointer"></i></a>
                             <a href="https://github.com/IlhamMalabu/quotes-api" target="_blank"><i class="fab fa-github cursor-pointer"></i></a>
                         </div>
@@ -115,7 +115,7 @@
                 <div class="flex flex-col md:flex-row justify-center items-center gap-5 flex-nowrap md:flex-wrap overflow-x-auto md:mx-24">
                     <div
                     class = "flex flex-col h-80 w-64 m-5 bg-c-purple border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
-        <div class="flex flex-col sm:flex-row pt-5 items-center justify-between">
+        <div class="flex pt-5 items-center justify-between">
             <div class="flex flex-col py-2 px-5 font-bold">GPA Calculator <span
                     class="font-light">2021</span>
             </div>
