--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <section class="mb-28 items-center pt-24 flex flex-col" id="projects">
             <div class="text-center font-serif text-4xl font-bold tracking-wide pb-5">projects</div>
-            <div class="flex flex-col md:flex-row justify-center items-center gap-5 flex-nowrap md:flex-wrap overflow-x-auto md:mx-24">
+            <div class="flex flex-col md:flex-row justify-center items-center gap-5 flex-nowrap md:flex-wrap lg:flex-nowrap overflow-x-auto md:mx-24">
                 <div class="flex flex-col h-80 w-64 m-5 bg-c-pink border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
                     <div class="flex pt-5 items-center justify-between">
                         <div class="flex flex-col py-2 px-5 font-bold">YONKI Abuja<span class="font-light">2023</span></div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
                 <!-- beggining 2 -->
-                <div class="flex flex-col md:flex-row justify-center items-center gap-5 flex-nowrap md:flex-wrap overflow-x-auto md:mx-24">
+                <div class="flex flex-col md:flex-row justify-center items-center gap-5 flex-nowrap lg:flex-nowrap md:flex-wrap overflow-x-auto md:mx-24">
                     <div
                     class = "flex flex-col h-80 w-64 m-5 bg-c-purple border-t-2 border-l-2 border-r-4 border-b-4 border-black rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 ">
         <div class="flex pt-5 items-center justify-between">
