Comment out Instagram link in footer
Comment out Instagram link section in index.html

--- a/index.html
+++ b/index.html
@@ -288,12 +288,14 @@
                         <i class="fa fa-youtube" id="contact-btn"></i>
                     </a>
                 </div>
+                <!-- >
                 <div>
                     <a href="https://instagram.com/zainabu.ilham" target="_blank"
                         title="External link to my Instagram Account">
                         <i class="fa fa-instagram" id="contact-btn"></i>
                     </a>
                 </div>
+            </div> -->
             </div>
         </section>
     </main>
