--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                     </a>
                 </div>
                 <!-- >
+                 remove instagram
                 <div>
                     <a href="https://instagram.com/zainabu.ilham" target="_blank"
                         title="External link to my Instagram Account">
