--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li class="px-2"><a href="#projects">projects</a></li>
             <li class="px-2"><a href="#services">services</a></li>
             <span class="visible">
-                <li class=""><a href="files/Zainabu_Tech_Resume_2024.pdf" target="_blank" target="_blank"
+                <li class=""><a href="files\Zainabu_Malabu cv_2025.pdf" target="_blank" target="_blank"
                         class="border border-square border-c-green rounded-md px-3 py-2 hover:font-semibold hover:bg-c-yellow cursor-pointer">resume</a>
                     <span class="absolute inline-flex h-3 w-3 rounded-full bg-c-green -my-2 -mx-2"><span
                             class="relative animate-ping inline-flex rounded-full h-3 w-3 bg-c-green"></span></span>
